--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -14,7 +14,7 @@
   }
 
   .accountQuestion {
-    font-size: var(--pL);
+    font-size: var(--pM);
     line-height: var(--lineHeight);
     color: var(--grey-color);
     font-weight: 400;
