--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -12,6 +12,8 @@
     --border-color: #e6e6e6;
     --placeholder-color: #f7f7f7;
     --shadow-color: rgba(0, 0, 0, 0.05);
+
+    --contentWidth:800px;
     
     //transition
     --trTime0: 0.2s;
@@ -20,7 +22,8 @@
 
 
     --h1: 30px;
-    --pL: 16px;
+    --pL: 18px;
+    --pM: 16px;
     --pS: 12px;
 
     //border
@@ -40,7 +43,9 @@
     --m28: 28px;
     --m30: 30px;
     --m32: 32px;
+    --m35: 35px;
     --m40: 40px;
+    --m50: 50px;
     --m60: 60px;
 
 
