--- a/src/components/Avatar/styles.module.scss
+++ b/src/components/Avatar/styles.module.scss
@@ -2,19 +2,21 @@
   position: relative;
   border-radius: 50%;
   overflow: hidden;
-  background-color: var(--placeholder-color);
+  background-color: var(--primary-background-color);
   display: flex;
   align-items: center;
   justify-content: center;
+  text-transform: uppercase;
+  border: 1px solid var(--border-color);
   
   &.small {
-    width: 32px;
-    height: 32px;
+    width: 50px;
+    height: 50px;
   }
   
   &.big {
-    width: 80px;
-    height: 80px;
+    width: 100px;
+    height: 100px;
   }
   
   &.editable {
@@ -28,16 +30,16 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-  color: var(--grey-color);
+  color: var(--primary-color);
   font-weight: 500;
   font-size: 18px;
   
   .small & {
-    font-size: 14px;
+    font-size: var(--pL);
   }
   
   .big & {
-    font-size: 32px;
+    font-size: var(--h1);
   }
 }
 
