--- a/src/components/EditProfileModal/styles.module.scss
+++ b/src/components/EditProfileModal/styles.module.scss
@@ -1,24 +1,34 @@
-.modalOverlay {
-    position: fixed;
+.modalWrapper{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+  padding: 20px;
+  animation: fadeIn 0.2s ease-in-out;
+
+  .modalOverlay {
+    position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 1000;
-    padding: 20px;
-    animation: fadeIn 0.2s ease-in-out;
+    z-index: 0;
   }
   
   .modalContent {
+    position: relative;
+    z-index: 11;
+    border: 1px solid var(--border-color);
     background-color: var(--background-color);
     border-radius: 8px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
     width: 100%;
-    max-width: 500px;
+    max-width: 600px;
     max-height: 90vh;
     overflow-y: auto;
     animation: slideIn 0.2s ease-in-out;
@@ -55,3 +65,4 @@
       padding: 0;
     }
   }
+}
