--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,18 +5,33 @@
     padding: 0;
     margin: 0;
     -webkit-locale: auto;
-    font-family: var(--font-poppins), sans-serif;
 }
 
 
 html,
 body {
-    font-size: var(--pL);
+    font-size: var(--pM);
     font-family: 'Inter', sans-serif;
-    background-color: var(--primary-background-color);
+    background-color: var(--background-color);
     color: var(--primary-color);
     line-height: var(--lineHeight);
     -webkit-font-smoothing: antialiased;
+
+    @media (max-width: 767px) {
+        background-color: var(--background-color);
+    }
+}
+
+.authPage {
+    min-height: calc(100vh - 152px);
+    display: flex;
+    justify-content: center;
+    background-color: var(--primary-background-color);
+
+    @media (min-width: 768px) {
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 svg {
@@ -26,6 +41,15 @@ svg {
 img {
     max-width: 100%;
     object-fit: cover;
+}
+
+h1 {
+    font-size: var(--h1);
+    font-weight: 500;
+    margin-bottom: var(--m25);
+    font-family: 'Inter', sans-serif;
+    color: var(--primary-color);
+    line-height: var(--lineHeight);
 }
 
 
@@ -38,4 +62,22 @@ a {
     &:focus {
         text-decoration: none;
     }
+}
+
+
+.loading{
+    font-size: var(--pL);
+    font-weight: 500;
+    font-family: 'Inter', sans-serif;
+    color: var(--primary-color);
+    line-height: var(--lineHeight);
+    min-height: 200px;
+}
+
+.error{
+    font-size: var(--pL);
+    font-weight: 500;
+    font-family: 'Inter', sans-serif;
+    color: var(--primary-color);
+    line-height: var(--lineHeight);
 }
