--- a/src/app/all-accounts/styles.module.scss
+++ b/src/app/all-accounts/styles.module.scss
@@ -1,5 +1,5 @@
 .accountContainer{
-  padding: var(--m50) 0;
+  padding-top: var(--m50);
   max-width: 800px;
   min-height: calc(100vh - 152px);
   margin: 0 auto;
