--- a/src/components/AccountsList/styles.module.scss
+++ b/src/components/AccountsList/styles.module.scss
@@ -4,12 +4,15 @@
   .item {
     padding: 10px 0;
     border-bottom: 1px solid var(--border-color);
-    display: flex;
-    align-items: center;
-    gap: var(--m20);
-
+    
     &:first-child {
       border-top: 1px solid var(--border-color);
+    }
+    
+    .link{
+      display: flex;
+      align-items: center;
+      gap: var(--m20);
     }
   }
 
